# botproject-alex-jeannie

./: .breakpoints  Aerincorpusfarewells copy.yml  Aerincorpusfarewells.yml  Aerincorpusgreetings.yml  aconvoclean.txt  aerin1.txt  aerin1clean.txt  aerinbot.py  aerinconvo.txt  aerinjennconvo  aerinjennconvo1.txt  aerinjennconvo2.txt  ajconvo1clean.txt  ajconvo2clean.txt  cleaner1.py  cleaner2.py  cleaner3.5.py  cleaner3.py  cleaner4.py  corpusmaker1.py  db.sqlite3  db.sqlite3-shm  db.sqlite3-wal  farewells.yml  goings.yml  greetings.yml  grootings.yml  logs  main.py  markovify(NOTES).py  name.yml  pyproject.toml  spis.yml  spisybot.py
exported/: SPIS 2021 - Archive - lab0 [868540122344353842].txt  SPIS 2021 - Archive - lab1 [868540134700773396].txt  SPIS 2021 - Assignments & Labs - general-lab-chat [874030447343071293].txt  SPIS 2021 - SPIS SOCIALS - just-hanging-out [868552432102285373] copy.txt  SPIS 2021 - SPIS SOCIALS - pet-pictures [873624364296323163].txt
notes/: Discord bot notes  chatterbot notes  logs  markovify(reference).py
txtfiles/: SPIS 2021 - Archive - lab0 [868540122344353842].txt  SPIS 2021 - Archive - lab1 [868540134700773396].txt  SPIS 2021 - Assignments & Labs - general-lab-chat [874030447343071293].txt  SPIS 2021 - Mentors - mentor-yukati-text [872218556723499048].txt  SPIS 2021 - SPIS SOCIALS - food-time [869001046763134977].txt  SPIS 2021 - SPIS SOCIALS - just-hanging-out [868552432102285373].txt  SPIS 2021 - SPIS SOCIALS - pet-pictures [873624364296323163].txt  aconvoclean.txt  aerin1.txt  aerinconvo.txt  aerinjennconvo  fullchatclean.txt  (+1 more)
