[tool.poetry]
name = "repl_python3_botproject-alex-jeannie"
version = "0.1.0"
description = ""
authors = ["AlexanderWong4 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
markovify = "^0.9.3"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
